--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@nestjs/mongoose": "^11.0.4",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/cookie-parser": "^1.4.10",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "cookie-parser": "^1.4.7",
     "mongoose": "^9.1.3",
     "multer": "^2.0.2",
     "passport": "^0.7.0",
